--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 html {
+  font-size: 1.3em;
   box-sizing: border-box;
   line-height: 1.5;
   letter-spacing: 0.1em;
@@ -7,6 +8,7 @@ html {
 
 body {
   max-width: 1920px;
+  min-width: 30em;
   min-height: 100vh;
   margin: 0 auto;
   padding: 0 20%;
@@ -16,7 +18,7 @@ body {
   justify-content: space-between;
 
   --red: rgb(238, 77, 77);
-  --green: rgb(25, 160, 66);
+  --green: rgb(30, 150, 66);
   --light: #f5f5fa;
   --dark-gray: rgb(49, 49, 49);
   --gray: #32343596;
@@ -71,14 +73,15 @@ label {
   justify-content: center;
   border-radius: 0.2em;
   border: 0.1em solid var(--dark-gray);
-  background-color: var(--light);
+  background-color: var(--dark-gray);
+  color: var(--light);
   transition: 0.3s;
 }
 
 .btn:hover,
 .btn:focus {
-  color: var(--light);
-  background: var(--dark-gray);
+  color: var(--dark-gray);
+  background: var(--light);
 }
 
 .task {
@@ -87,12 +90,14 @@ label {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 0.1em solid var(--gray);
+  border: 0.05em solid var(--gray);
   border-radius: 0.2em;
-  background-color: var(--dark-gray);
-  color: var(--light);
   transition: .3s;
   animation: show .6s both;
+}
+
+.task:hover {
+  box-shadow: 0 0 .6em var(--gray);
 }
 
 @keyframes show {
@@ -113,8 +118,10 @@ label {
   position: relative;
   width: 1.5em;
   height: 1.5em;
+  margin-right: .5em;
   border-radius: .2em;
   background-color: var(--light);
+  border: .1em solid var(--gray)
 }
 
 .fake-checkbox::before {
@@ -135,46 +142,35 @@ label {
 
 .task__checkbox-complete:checked + .fake-checkbox::before {
   content: "✔";
-  color: var(--green);
-}
-
-.task__number {
-  margin: 0 .5em 0 1em;
-  padding-right: .4em;
 }
 
 .task__description {
   cursor: default;
   flex: 1;
-  margin-right: .6em;
   padding: .4em;
   font-size: 1.2em;
-  background-color: transparent;
-  border: none;
   border-radius: inherit;
-  box-shadow: inset 0 0 .1em var(--light);
+  border: inherit;
+  background-color: transparent;
   color: inherit;
 }
 
 .task__btn-delete {
-  width: 2em;
-  height: 2em;
-  padding: 0;
+  font-size: 2em;
   border-color: transparent;
   background-color: transparent;
   color: inherit;
 }
 
 .task__btn-delete:hover {
-  background-color: var(--red);
-  border-color: var(--red);
+  background-color: transparent;
+  color: var(--red);
 }
 
 /* -------------------------------------------- */
 
 .header {
   width: 100%;
-  margin-bottom: 2em;
   border-bottom: 0.1em solid var(--gray);
 }
 
@@ -183,15 +179,66 @@ label {
 }
 
 .main {
+  position: relative;
   width: 100%;
+  min-height: 35em;
+  height: 79vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.complete-section {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 9.6em;
+  height: 2.7em;
+  padding: .6em;
+  overflow: hidden;
+  border-radius: .2em;
+  background-color: var(--dark-gray);
+  color: var(--light);
+}
+
+.complete-section.visible {
+  width: auto;
+  height: auto;
+}
+
+.fake-complete-task-checkbox {
+  position: relative;
+  margin-bottom: 1em;
+  display: inline-block;
+  border-radius: inherit;
+  transition: .2s;
+}
+
+.fake-complete-task-checkbox::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(50%);
+  height: .1em;
+  width: 100%;
+  background-color: var(--light);
+  transition: inherit;
+}
+
+#visible-complete-task:checked + .fake-complete-task-checkbox::before {
+  width: 0;
 }
 
 .todo-app {
-  max-width: 40em;
+  min-width: 26em;
+  max-width: 42em;
   width: 100%;
+  padding: 1em;
+  max-height: 30em;
+  overflow: auto;
 }
 
 .todo-app__add {
@@ -258,7 +305,6 @@ label {
 
 .footer {
   width: 100%;
-  margin-top: 2em;
   border-top: 0.1em solid var(--gray);
 }
 
